--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,3 @@
-
 body, html {
   margin: 0;
   padding: 0;
@@ -9,6 +8,7 @@ width: auto;
 max-width: 1200px;
 margin: 0 auto;
 background-color: #000223;
+min-height: 620px;
 }
 
 .background {
@@ -49,14 +49,13 @@ display: block;
 .booking-form {
   background-color: #ffffff;
   max-width: 400px;
-  padding: 20px;
   box-sizing: border-box;
   border-radius: 8px;
 }
 
 .text-center {
 text-align: center;
-margin-bottom: 20px;
+margin-bottom: 5px;
 }
 
 .form-group {
@@ -109,7 +108,7 @@ button {
 @media screen and (max-width: 480px) {
   .booking-form {
     width: 90%;
-    padding: 15px;
+    padding: 10px;
     max-height: 85%;
   }
 }
